--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.4",
     "appwrite": "^11.0.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
